--- a/Makefile.am
+++ b/Makefile.am
@@ -10,6 +10,7 @@ conf_DATA = 								\
 	xfce4rc.hu							\
 	xfce4rc.it							\
 	xfce4rc.nl 							\
+	xfce4rc.ro							\
 	xfce4rc.vi
 
 EXTRA_DIST = 								\
