--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -23,5 +23,5 @@ plugins/switcher/switcher.c
 plugins/systembuttons/systembuttons.c
 plugins/separator/separator.c
 plugins/mailcheck/mailcheck.c
-
+plugins/sample-plugin/sample.c
 
