--- a/Makefile.am
+++ b/Makefile.am
@@ -11,6 +11,7 @@ conf_DATA = 								\
 	xfce4rc.ms							\
 	xfce4rc.nl 							\
 	xfce4rc.ro							\
+	xfce4rc.ru							\
 	xfce4rc.vi
 
 EXTRA_DIST = 								\
