--- a/Makefile.in
+++ b/Makefile.in
@@ -224,6 +224,7 @@ conf_DATA = \
 	xfce4rc.ar							\
 	xfce4rc.az 							\
 	xfce4rc.ca							\
+	xfce4rc.he							\
 	xfce4rc.hu							\
 	xfce4rc.it							\
 	xfce4rc.ms							\
