--- a/plugins/clock/Makefile.am
+++ b/plugins/clock/Makefile.am
@@ -16,3 +16,15 @@ libclock_la_CFLAGS =							\
 
 libclock_la_LIBADD = 							\
 	@LIBS@
+
+if HAVE_CYGWIN
+libclock_la_LDFLAGS +=                                                  \
+	-no-undefined                                                   \
+	-export-symbols $(top_srcdir)/panel/panel.def                   \
+	@LIBXML_LDFLAGS@                                                \
+	@LIBX11_LDFLAGS@                                                
+libclock_la_LIBADD +=                                                   \
+	@XFCE_MCS_MANAGER_LIBS@                                         \
+	@LIBXML_LIBS@                                                   \
+	@LIBX11_LIBS@
+endif
