--- a/plugins/switcher/Makefile.in
+++ b/plugins/switcher/Makefile.in
@@ -37,6 +37,17 @@ NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
 host_triplet = @host@
+@HAVE_CYGWIN_TRUE@am__append_1 = \
+@HAVE_CYGWIN_TRUE@	-no-undefined                                                   \
+@HAVE_CYGWIN_TRUE@	-export-symbols $(top_srcdir)/panel/panel.def                   \
+@HAVE_CYGWIN_TRUE@	@LIBXML_LDFLAGS@                                                \
+@HAVE_CYGWIN_TRUE@	@LIBX11_LDFLAGS@                                                
+
+@HAVE_CYGWIN_TRUE@am__append_2 = \
+@HAVE_CYGWIN_TRUE@	@XFCE_MCS_MANAGER_LIBS@                                         \
+@HAVE_CYGWIN_TRUE@	@LIBXML_LIBS@                                                   \
+@HAVE_CYGWIN_TRUE@	@LIBX11_LIBS@
+
 subdir = plugins/switcher
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -51,7 +62,8 @@ CONFIG_CLEAN_FILES =
 am__installdirs = "$(DESTDIR)$(plugindir)"
 pluginLTLIBRARIES_INSTALL = $(INSTALL)
 LTLIBRARIES = $(plugin_LTLIBRARIES)
-libswitcher_la_DEPENDENCIES =
+am__DEPENDENCIES_1 =
+libswitcher_la_DEPENDENCIES = $(am__DEPENDENCIES_1)
 am_libswitcher_la_OBJECTS = libswitcher_la-switcher.lo
 libswitcher_la_OBJECTS = $(am_libswitcher_la_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
@@ -106,6 +118,8 @@ FFLAGS = @FFLAGS@
 GETTEXT_PACKAGE = @GETTEXT_PACKAGE@
 GMOFILES = @GMOFILES@
 GMSGFMT = @GMSGFMT@
+HAVE_CYGWIN_FALSE = @HAVE_CYGWIN_FALSE@
+HAVE_CYGWIN_TRUE = @HAVE_CYGWIN_TRUE@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
@@ -216,8 +230,8 @@ plugindir = $(libdir)/xfce4/panel-plugins
 plugin_LTLIBRARIES = libswitcher.la
 libswitcher_la_LDFLAGS = \
 	-avoid-version							\
-	-module
-
+	-module\
+$(am__append_1)
 libswitcher_la_SOURCES = \
 	switcher.c
 
@@ -228,8 +242,8 @@ libswitcher_la_CFLAGS = \
 	@LIBXML_CFLAGS@
 
 libswitcher_la_LIBADD = \
-	@LIBS@
-
+	@LIBS@\
+$(am__append_2)
 all: all-am
 
 .SUFFIXES:
