--- a/plugins/mailcheck/Makefile.am
+++ b/plugins/mailcheck/Makefile.am
@@ -17,3 +17,15 @@ libmailcheck_la_CFLAGS =						\
 
 libmailcheck_la_LIBADD =						\
 	@LIBS@
+
+if HAVE_CYGWIN
+libmailcheck_la_LDFLAGS +=                                              \
+	-no-undefined                                                   \
+	-export-symbols $(top_srcdir)/panel/panel.def                   \
+	@LIBXML_LDFLAGS@                                                \
+	@LIBX11_LDFLAGS@                                                
+libmailcheck_la_LIBADD +=                                               \
+	@XFCE_MCS_MANAGER_LIBS@                                         \
+	@LIBXML_LIBS@                                                   \
+	@LIBX11_LIBS@
+endif
