--- a/plugins/sample-plugin/Makefile.am
+++ b/plugins/sample-plugin/Makefile.am
@@ -15,3 +15,14 @@ libsample_la_CFLAGS =						\
 libsample_la_LIBADD =						\
 	@LIBS@
 
+if HAVE_CYGWIN
+libsample_la_LDFLAGS +=                                                  \
+	-no-undefined                                                   \
+	-export-symbols $(top_srcdir)/panel/panel.def                   \
+	@LIBXML_LDFLAGS@                                                \
+	@LIBX11_LDFLAGS@                                                
+libsample_la_LIBADD +=                                                   \
+	@XFCE_MCS_MANAGER_LIBS@                                         \
+	@LIBXML_LIBS@                                                   \
+	@LIBX11_LIBS@
+endif
