--- a/plugins/separator/Makefile.am
+++ b/plugins/separator/Makefile.am
@@ -16,3 +16,15 @@ libseparator_la_CFLAGS =						\
 
 libseparator_la_LIBADD =						\
 	@LIBS@
+
+if HAVE_CYGWIN
+libseparator_la_LDFLAGS +=                                              \
+	-no-undefined                                                   \
+	-export-symbols $(top_srcdir)/panel/panel.def                   \
+	@LIBXML_LDFLAGS@                                                \
+	@LIBX11_LDFLAGS@                                                
+libseparator_la_LIBADD +=                                               \
+	@XFCE_MCS_MANAGER_LIBS@                                         \
+	@LIBXML_LIBS@                                                   \
+	@LIBX11_LIBS@
+endif
