--- a/plugins/systembuttons/Makefile.am
+++ b/plugins/systembuttons/Makefile.am
@@ -16,3 +16,15 @@ libsystembuttons_la_CFLAGS =						\
 
 libsystembuttons_la_LIBADD =						\
 	@LIBS@
+
+if HAVE_CYGWIN
+libsystembuttons_la_LDFLAGS +=                                          \
+	-no-undefined                                                   \
+	-export-symbols $(top_srcdir)/panel/panel.def                   \
+	@LIBXML_LDFLAGS@                                                \
+	@LIBX11_LDFLAGS@                                                
+libsystembuttons_la_LIBADD +=                                           \
+	@XFCE_MCS_MANAGER_LIBS@                                         \
+	@LIBXML_LIBS@                                                   \
+	@LIBX11_LIBS@
+endif
