--- a/configure.in.in
+++ b/configure.in.in
@@ -12,9 +12,9 @@ dnl *** Version information ***
 dnl ***************************
 m4_define([libxfce4panel_verinfo], [2:2:1])
 m4_define([xfce4_panel_version_major], [4])
-m4_define([xfce4_panel_version_minor], [5])
-m4_define([xfce4_panel_version_micro], [99])
-m4_define([xfce4_panel_version_nano],  [1]) dnl leave this empty to have no nano version
+m4_define([xfce4_panel_version_minor], [6])
+m4_define([xfce4_panel_version_micro], [0])
+m4_define([xfce4_panel_version_nano],  []) dnl leave this empty to have no nano version
 m4_define([xfce4_panel_version_build], [r@REVISION@])
 m4_define([xfce4_panel_version_tag],   [])
 m4_define([xfce4_panel_version], [xfce4_panel_version_major().xfce4_panel_version_minor().xfce4_panel_version_micro()ifelse(xfce4_panel_version_nano(), [], [], [.xfce4_panel_version_nano()])ifelse(xfce4_panel_version_tag(), [svn], [xfce4_panel_version_tag()-xfce4_panel_version_build()], [xfce4_panel_version_tag()])])
@@ -107,12 +107,12 @@ XDT_CHECK_LIBSM()
 dnl ***********************************
 dnl *** Check for required packages ***
 dnl ***********************************
-XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.5.99.1])
-XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.8.0])
-XDT_CHECK_PACKAGE([GTHREAD], [gthread-2.0], [2.8.0])
-XDT_CHECK_PACKAGE([GMODULE], [gmodule-2.0], [2.8.0])
-XDT_CHECK_PACKAGE([LIBXFCEGUI4], [libxfcegui4-1.0], [4.5.99.1])
-XDT_CHECK_PACKAGE([LIBEXO], [exo-0.3], [0.3.93])
+XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.6.0])
+XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.10.0])
+XDT_CHECK_PACKAGE([GTHREAD], [gthread-2.0], [2.12.0])
+XDT_CHECK_PACKAGE([GMODULE], [gmodule-2.0], [2.12.0])
+XDT_CHECK_PACKAGE([LIBXFCEGUI4], [libxfcegui4-1.0], [4.6.0])
+XDT_CHECK_PACKAGE([LIBEXO], [exo-0.3], [0.3.100])
 XDT_CHECK_PACKAGE([CAIRO], [cairo], [1.0.0])
 
 dnl **********************
